--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title:            mdoradom
 tagline:          'Portfolio'
 description:      'Creating games. Passionate about open source 💙'
 url:              http://mdoradom.github.io
-baseurl:          /mdoradom/
+baseurl:          https://mdoradom.github.io/mdoradom/
 
 author:
   name:           'mdoradom'
