--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 title:            mdoradom
 tagline:          'Portfolio'
 description:      'Creating games. Passionate about open source 💙'
-url:              http://mdoradom.github.io
-baseurl:          https://mdoradom.github.io/
+url:              http://mdoradom.github.io/mdoradom
+baseurl:          https://mdoradom.github.io/mdoradom/
 
 author:
   name:           'mdoradom'
