--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            mdoradom
 tagline:          'Portfolio'
 description:      'Creating games. Passionate about open source 💙'
-url:              http://mdoradom.github.io/mdoradom
+url:              http://mdoradom.github.io/mdoradom/
 baseurl:          https://mdoradom.github.io/mdoradom/
 
 author:
