--- a/_i18n/es.yml
+++ b/_i18n/es.yml
@@ -5,5 +5,5 @@ global:
   contact: "Contacto"
   download_cv: "Descargar CV"
   toggle_theme: "Cambiar tema"
-  version: "Actualmente v"
+  version: "Versión actual v"
   license: "Hosteado por <a href='https://pages.github.com/'>GitHub Pages</a>. Código fuente de la web en <a href='https://github.com/mdoradom/mdoradom'>GitHub</a>. Bajo"
