--- a/_config.yml
+++ b/_config.yml
@@ -1,64 +1,44 @@
-# Dependencies
-markdown:         kramdown
-highlighter:      rouge
+name: Jekyll site CI
 
-# Markdown Processors
-kramdown:
-  input: GFM
-  auto_ids: true
-  syntax_highlighter: rouge
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
-# Permalinks
-permalink:        pretty
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-# Setup
-title: >-
-  &lt;&gt;<br>mdoradom
-email: tu@email.com
-tagline:          'Portfolio'
-description: >-
-  // Creating games. Based in Barcelona. Pro FOSS 💙
-url:              "https://mdoradom.github.io/mdoradom"
-baseurl:          /mdoradom
-github_username:  mdoradom
-linkedin_username: mario-dorado-martinez
-version:          1.0.0
-license:          GPLv3
-github_url: https://github.com/mdoradom
-linkedin_url: https://www.linkedin.com/in/mario-dorado-martinez/
-mastodon_url: https://mastodon.social/@mdoradom
-itchio_url: https://mdoradom.itch.io/
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
-author:
-  name:           'mdoradom'
-  url:            https://github.com/mdoradom/
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-download:
-  cv:             /assets/mario_dorado_martinez_cv.pdf
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+          bundler-cache: true
 
-github:
-  repo:           https://github.com/mdoradom/mdoradom
+      - name: Install dependencies
+        run: bundle install
 
-plugins:
-  - gemoji
-  - jekyll-seo-tag
-  - jekyll-sitemap
-  - jekyll-multiple-languages-plugin
-  - jekyll-feed
+      - name: Build Jekyll site
+        run: bundle exec jekyll build
 
-# Multilanguage settings
-languages: ["en", "es", "ca"]
-default_lang: "en"
-exclude_from_localization: ["javascript", "images", "css"]
-
-collections:
-  projects:
-    output: true
-    permalink: /projects/:name/
-
-defaults:
-  - scope:
-      path: ""
-      type: "projects"
-    values:
-      layout: "project"
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
