--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,40 +39,25 @@ jobs:
           rm -rf .bundle
           rm -rf vendor
 
-      - name: Install dependencies for ruby-build
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev libreadline-dev zlib1g-dev
-
-      - name: Install ruby-build
-        run: |
-          git clone https://github.com/rbenv/ruby-build.git
-          sudo PREFIX=/usr/local ./ruby-build/install.sh
-
-      - name: Install Ruby 3.1.4
-        run: |
-          ruby-build 3.1.4 /opt/hostedtoolcache/Ruby/3.1.4/x64
-          touch /opt/hostedtoolcache/Ruby/3.1.4/x64.complete
-        env:
-          RUNNER_TOOL_CACHE: /opt/hostedtoolcache
-
       - name: Setup Ruby
-        uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
-          bundler-cache: true
-          cache-version: 0
+          ruby-version: '3.1' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
 
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
 
       - name: Build with Jekyll
+        # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
 
       - name: Upload artifact
+        # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
 
   # Deployment job
