--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ email: tu@email.com
 tagline:          'Portfolio'
 description: >-
   // Creating games. Based in Barcelona. Pro FOSS 💙
-url:              "https://mdoradom.github.io/mdoradom"
-baseurl:          /mdoradom
+url:              "https://mdoradom.com"
+baseurl:          /
 github_username:  mdoradom
 linkedin_username: mario-dorado-martinez
 version:          1.0.0
@@ -31,7 +31,7 @@ itchio_url: https://mdoradom.itch.io/
 
 author:
   name:           'mdoradom'
-  url:            https://github.com/mdoradom/
+  url:            https://mdoradom.com
 
 download:
   cv:             /assets/mario_dorado_martinez_cv.pdf
