--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -62,16 +62,16 @@ heroStyle = "background"
 [list]
 showHero = true
 layoutBackgroundBlur = true
-layoutBackgroundHeaderSpace = true
+layoutBackgroundHeaderSpace = false
 showBreadcrumbs = false
-showSummary = false
+showSummary = true
 showViews = false
 showLikes = false
 showTableOfContents = false
 showCards = true
-orderByWeight = false
+orderByWeight = true
 groupByYear = false
-cardView = false
+cardView = true
 cardViewScreenWidth = false
 constrainItemsWidth = false
 heroStyle = "background"
