--- a/config/_default/languages.ca.toml
+++ b/config/_default/languages.ca.toml
@@ -15,6 +15,7 @@ description = "// Creating games. Based in Barcelona. Pro FOSS 💙"
 name = "Mario"
 bio = "Test author description"
 headline = "// Creating games. Based in Barcelona. Pro FOSS 💙"
+image = "profile.png"
 links = [
   { github = "https://github.com/mdoradom" },
   { linkedin = "https://linkedin.com/in/mario-dorado-martinez" },
