--- a/themes/blowfish/config/_default/hugo.toml
+++ b/themes/blowfish/config/_default/hugo.toml
@@ -16,7 +16,7 @@ buildFuture = false
 
 enableEmoji = true
 
-googleAnalytics = "G-RFTFQPM2Q9"
+# googleAnalytics = "G-RFTFQPM2Q9"
 
 [pagination]
   pagerSize = 100
