--- a/themes/blowfish/config/_default/hugo.toml
+++ b/themes/blowfish/config/_default/hugo.toml
@@ -2,7 +2,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://blowfish.page/docs/getting-started/
 
-# theme = "blowfish" # UNCOMMENT THIS LINE
+theme = "blowfish"
 # baseURL = "https://your_domain.com/"
 defaultContentLanguage = "en"
 
@@ -16,7 +16,7 @@ buildFuture = false
 
 enableEmoji = true
 
-# googleAnalytics = "G-RFTFQPM2Q9"
+googleAnalytics = "G-RFTFQPM2Q9"
 
 [pagination]
   pagerSize = 100
